added embedding for cleaner responses and replaced mal scrape with jikan endpoints